# django_hw_22

./: README.md  category_fixture.json  product_fixture.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/managament/commands/: add_post.py
blog/templates/blog/: base.html  post_form.html  post_list.html
blogs/: admin.py  urls.py  views.py
blogs/management/commands/: add_post.py
blogs/migrations/: 0001_initial.py
blogs/templates/blogs/: base.html  post_delete_confirm.html  post_detail.html  post_form.html  post_list.html
blogs/templates/includes/: inc_menu.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/managament/commands/: add_category.py
catalog/management/commands/: add_category.py
catalog/migrations/: 0001_initial.py  0002_alter_product_image.py  0003_alter_product_purchase_price.py  0004_product_publication_status.py  0005_alter_product_options.py  0006_alter_product_options.py  0007_alter_product_options_alter_product_image_and_more.py  0008_alter_product_options.py  0009_product_owner.py  0010_alter_category_options.py
catalog/templates/: base.html  contacts.html  home.html  product_detail.html  product_list.html
catalog/templates/catalog/: base.html  category_create.html  category_delete_confirm.html  home.html  (+10 more)
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_country.py  0003_customuser_token_alter_customuser_avatar_and_more.py
users/templates/: base.html  register.html
(+4 files in other folders)
