[tool.poetry]
name = "django-hw-22"
version = "0.1.0"
description = ""
authors = ["Dmitry_Bezgubov <dmitrij-bezgubov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
