[tool.poetry]
name = "django-hw-22"
version = "0.1.0"
description = ""
authors = ["Dmitry_Bezgubov <dmitrij-bezgubov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
black = "^24.10.0"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"
pillow = "^11.1.0"
ipython = "^8.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
